fixed overflow error for mobile devices in landscape mode

--- a/Cold3X.com/style.css
+++ b/Cold3X.com/style.css
@@ -331,13 +331,26 @@ button:hover {
 
 @media screen and (orientation: landscape) {
 
-  .stickySideBar{
-    height: 100dvh;
+  body {
+    background-image: url('assets/img/webBg.jpg');
+    background-position: center;
+    background-size: 100vw 100vh;
+    background-repeat: no-repeat;
+    animation: none;
   }
 
-  main{
-    outline: 2px solid blue;
+  .stickySideBar {
+    height: 100dvh;
+    z-index: 1;
+    overflow-y: scroll;
+  }
+
+  main {
     height: auto;
+  }
+
+  .headers{
+    display: block;
   }
 }
 
@@ -438,18 +451,18 @@ button:hover {
     margin: 0;
   }
 
-  .slide{
+  .slide {
     animation: autoRotate;
     animation-timeline: view(90% 5%);
   }
 
-  @keyframes autoRotate{
-    from{
+  @keyframes autoRotate {
+    from {
       opacity: 0;
       transform: translateY(10px) scale(0.3);
     }
 
-    to{
+    to {
       opacity: 1;
       transform: translateY(0) scale(1);
     }
